[gd_scene load_steps=4 format=3 uid="uid://bx8obf2s2187r"]

[ext_resource type="Texture2D" uid="uid://bl1jx1xu8f8by" path="res://assets/restarea.png" id="1_2ghpi"]
[ext_resource type="Script" uid="uid://cguysraaecu38" path="res://sacrifice_event.gd" id="1_x7w36"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x7w36"]
bg_color = Color(0.602628, 0.591661, 0.647937, 1)
border_width_left = 12
border_width_top = 12
border_width_right = 12
border_width_bottom = 12

[node name="SacrificeEvent" type="Node2D"]
script = ExtResource("1_x7w36")

[node name="Restarea" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.580392)
position = Vector2(1373, 441)
scale = Vector2(4.44, 4.44)
texture = ExtResource("1_2ghpi")

[node name="NextCombat" type="Button" parent="."]
visible = false
offset_left = 1339.0
offset_top = 537.0
offset_right = 1617.0
offset_bottom = 609.0
theme_override_font_sizes/font_size = 72
text = "Next Combat"

[node name="EventPopup" type="PanelContainer" parent="."]
offset_left = 1161.0
offset_top = 270.0
offset_right = 1857.0
offset_bottom = 734.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_x7w36")

[node name="MarginContainer" type="MarginContainer" parent="EventPopup"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="EventPopup/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="VBoxContainer2" type="VBoxContainer" parent="EventPopup/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_constants/separation = 50

[node name="RichTextLabel" type="RichTextLabel" parent="EventPopup/MarginContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(50, 100)
layout_mode = 2
mouse_filter = 2
theme_override_constants/outline_size = 12
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "Sacrifice all of your gold. For every 3 gold lost, all allies gain
+10  Max  Health
and gain +1  All Damage Bonus"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel2" type="RichTextLabel" parent="EventPopup/MarginContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(50, 100)
layout_mode = 2
mouse_filter = 2
theme_override_constants/outline_size = 12
theme_override_font_sizes/normal_font_size = 24
text = "All allies lose 30 Max Health
 In exchange, gain +15 gold"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel3" type="RichTextLabel" parent="EventPopup/MarginContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(50, 100)
layout_mode = 2
mouse_filter = 2
theme_override_constants/outline_size = 12
theme_override_font_sizes/normal_font_size = 24
text = "All Damage Mult is halved
All allies double thei r Max HP
Gain 1x Healing Mult and 1x Shielding Mult"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="EventPopup/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 71

[node name="SacrificeGold" type="Button" parent="EventPopup/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Sacrifice Gold"

[node name="SacrificeHealth" type="Button" parent="EventPopup/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Sacrifice Health"

[node name="SacrificeDamage" type="Button" parent="EventPopup/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Sacrifice Damage"

[connection signal="pressed" from="NextCombat" to="." method="_on_next_combat_pressed"]
[connection signal="pressed" from="EventPopup/MarginContainer/HBoxContainer/VBoxContainer/SacrificeGold" to="." method="_on_sacrifice_gold_pressed"]
[connection signal="pressed" from="EventPopup/MarginContainer/HBoxContainer/VBoxContainer/SacrificeHealth" to="." method="_on_sacrifice_health_pressed"]
[connection signal="pressed" from="EventPopup/MarginContainer/HBoxContainer/VBoxContainer/SacrificeDamage" to="." method="_on_sacrifice_damage_pressed"]
